if(WIN32)
  set (FISHSTORE_TEST_LINK_LIBS fishstore rpcrt4 gtest)
else()
  set (FISHSTORE_TEST_LINK_LIBS fishstore stdc++fs uuid tbb gcc aio m stdc++ pthread dl gtest)
endif()

if(MSVC)
  remove_definitions(NDEBUG)
endif()

#Function to automate building test binaries
FUNCTION(ADD_FISHSTORE_TEST TEST_NAME HEADERS)
  add_executable(${TEST_NAME} ${HEADERS} ${TEST_NAME}.cc)
  target_link_libraries(${TEST_NAME} ${FISHSTORE_TEST_LINK_LIBS} simdjson)
  if (MSVC)
    target_compile_options(${TEST_NAME} PRIVATE /UNDEBUG)
  else()
    target_compile_options(${TEST_NAME} PRIVATE -UNDEBUG)
  endif()
  add_test(${TEST_NAME} ${CMAKE_BINARY_DIR}/${TEST_NAME})
ENDFUNCTION()

ADD_FISHSTORE_TEST(in_memory_test "")
ADD_FISHSTORE_TEST(ingest_queue_test "ingest_test.h")
if (MSVC)
ADD_FISHSTORE_TEST(ingest_threadpool_test "ingest_test.h")
endif()
ADD_FISHSTORE_TEST(register_test "")
ADD_FISHSTORE_TEST(checkpoint_queue_test "checkpoint_test.h")
if (MSVC)
ADD_FISHSTORE_TEST(checkpoint_threadpool_test "checkpoint_test.h")
endif()

ADD_FISHSTORE_TEST(simdjson_adapter_test "")